Tweaked margins on sortable list items to prevent jumping on click and drag

--- a/res/css/global.css
+++ b/res/css/global.css
@@ -2488,7 +2488,5 @@ table.join-table tbody tr td b { font-size: 16px; }
 .list-group-item.sortable-placeholder { background-color: rgba(33, 150, 243, 0.5); border-color: #2196F3; margin: 10px 0; }
 
 .table-order-item { border: none; border-radius: 2px; -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3); box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3); margin: 10px 0; }
-.table-order-item:first-child { margin-top: 0; }
-.table-order-item:last-child { margin-bottom: 0; }
 
 /*# sourceMappingURL=global.css.map */
